<resources>
    <string name="cometchat_app_name" translatable="true">UI KIT</string>
    <string name="cometchat_shared_image_transition" translatable="false">shared_image_transition_%1$d</string>
    <string name="cometchat_user" translatable="true">user</string>
    <string name="cometchat_group" translatable="true">group</string>
    <string name="cometchat_conversation" translatable="true">conversation</string>
    <string name="cometchat_reply_lowercase" translatable="true">reply</string>
    <string name="cometchat_call" translatable="true">Call</string>
    <string name="cometchat_sticker_lowercase" translatable="true">sticker</string>
    <string name="cometchat_message" translatable="true">Write a message</string>
    <string name="cometchat_message_generic" translatable="true">Message</string>
    <string name="cometchat_start_conv_hint" translatable="true">Tap to start conversation</string>
    <string name="cometchat_admin" translatable="true">Admin</string>
    <string name="cometchat_moderator" translatable="true">Moderator</string>
    <string name="cometchat_member" translatable="true">Member</string>
    <string name="cometchat_join" translatable="true">Join</string>
    <string name="cometchat_camera_perm" translatable="true">Please grant camera permission from app setting</string>
    <string name="cometchat_storage_perm" translatable="true">Please grant storage permission from app setting</string>
    <string name="cometchat_file_not_exist" translatable="true">File doesn\'t exists</string>
    <string name="cometchat_ended" translatable="true">Ended</string>
    <string name="cometchat_outgoing" translatable="true">Outgoing</string>
    <string name="cometchat_incoming" translatable="true">Incoming</string>
    <string name="cometchat_missed_call" translatable="true">Missed</string>
    <string name="cometchat_cancel_call" translatable="true">Cancelled</string>
    <string name="cometchat_rejected_call" translatable="true">Rejected</string>
    <string name="cometchat_busy_call" translatable="true">Busy</string>
    <string name="cometchat_you" translatable="true">You</string>
    <string name="cometchat_edit" translatable="true">Edit</string>
    <string name="cometchat_delete" translatable="true">Delete</string>
    <string name="cometchat_share" translatable="true">Share</string>
    <string name="cometchat_thread_subscribed_toast" translatable="true">Subscribed. You\'ll be notified about new replies in this thread.</string>
    <string name="cometchat_thread_subscribed_toast_no_replies" translatable="true">Subscribed. You\'ll be notified about new replies.</string>
    <string name="cometchat_thread_unsubscribed_toast" translatable="true">Unsubscribed. Notifications are off until you reply or are mentioned.</string>
    <string name="cometchat_thread_unsubscribed_toast_no_replies" translatable="true">Unsubscribed. Notifications are off until you reply or are mentioned.</string>
    <string name="cometchat_thread_subscription_failed" translatable="true">Couldn\'t update. Please try again.</string>
    <string name="cometchat_thread_mute" translatable="true">Unsubscribe from thread</string>
    <string name="cometchat_thread_unmute" translatable="true">Subscribe to thread</string>
    <string name="cometchat_copy" translatable="true">Copy</string>
    <string name="cometchat_translate" translatable="true">Translate</string>
    <string name="cometchat_message_privately" translatable="true">Message Privately</string>
    <string name="cometchat_reply_uppercase" translatable="true">Reply In Thread</string>
    <string name="cometchat_info" translatable="true">"Info"</string>
    <string name="cometchat_online" translatable="true">Online</string>
    <string name="cometchat_offline" translatable="true">Offline</string>
    <string name="cometchat_attach_image" translatable="true">Attach Image</string>
    <string name="cometchat_attach_video" translatable="true">Attach Video</string>
    <string name="cometchat_poll" translatable="true">Poll</string>
    <string name="cometchat_create_poll" translatable="true">Create Poll</string>
    <string name="cometchat_set_the_answers" translatable="true">Set the answers</string>
    <string name="cometchat_answer_n" translatable="true" formatted="true">Answer %1$d</string>
    <string name="cometchat_camera" translatable="true">Camera</string>
    <string name="cometchat_yes" translatable="true">Yes</string>
    <string name="cometchat_shared_sticker" translatable="true">Shared a Sticker</string>
    <string name="cometchat_attach_audio" translatable="true">Attach Audio</string>
    <string name="cometchat_attach_document" translatable="true">Attach Document</string>
    <string name="cometchat_no" translatable="true">No</string>
    <string name="cometchat_question" translatable="true">Question</string>
    <string name="cometchat_collaborative_whiteboard" translatable="true">Collaborative Whiteboard</string>
    <string name="cometchat_collaborative_doc" translatable="true">Collaborative Document</string>
    <string name="cometchat_yesterday" translatable="true">Yesterday</string>
    <string name="cometchat_ban" translatable="true">Ban</string>
    <string name="cometchat_document" translatable="true">Document</string>
    <string name="cometchat_polls" translatable="true">Polls</string>
    <string name="cometchat_sticker_uppercase" translatable="true">Sticker</string>
    <string name="cometchat_custom_message_whiteboard" translatable="true">Whiteboard</string>
    <string name="cometchat_error" translatable="true">Error</string>
    <string name="cometchat_added" translatable="true">added</string>
    <string name="cometchat_kicked_by" translatable="true">kicked</string>
    <string name="cometchat_left" translatable="true">left</string>
    <string name="cometchat_joined" translatable="true">joined</string>
    <string name="cometchat_unban" translatable="true">Unban</string>
    <string name="cometchat_made" translatable="true">made</string>
    <string name="cometchat_participant" translatable="true">Participant</string>
    <string name="cometchat_translation_error" translatable="true">Selected language for translation is similar to the language of original message</string>
    <string name="cometchat_group_call" translatable="true">Group Call</string>
    <string name="cometchat_updating" translatable="true">Updating</string>
    <string name="cometchat_chats" translatable="true">Chats</string>
    <string name="cometchat_downloading" translatable="true">Downloading</string>
    <string name="cometchat_download" translatable="true">Download</string>
    <string name="cometchat_no_preview_available" translatable="true">No preview available</string>
    <string name="cometchat_no_preview_subtitle" translatable="true">This file type isn\'t supported for preview.</string>
    <string name="cometchat_today" translatable="true">Today</string>
    <string name="cometchat_replies" translatable="true">Replies</string>
    <string name="cometchat_new_message" translatable="true">new message</string>
    <string name="cometchat_new_messages" translatable="true">" new messages"</string>
    <string name="cometchat_channel_description" translatable="true">Channel Description</string>
    <string name="cometchat_action_item" translatable="true">action_item</string>
    <string name="cometchat_try_again" translatable="true">Try again</string>
    <string name="cometchat_something_went_wrong" translatable="true">Something went wrong.</string>
    <string name="cometchat_action_permission_denied" translatable="true">You don\'t have permission to perform this action.</string>
    <string name="cometchat_transfer_ownership" translatable="true">Transfer Ownership</string>
    <string name="cometchat_add_members" translatable="true">Add Members</string>
    <string name="cometchat_owner" translatable="true">Owner</string>
    <string name="cometchat_banned" translatable="true">Banned</string>
    <string name="cometchat_calling" translatable="true">calling</string>
    <string name="cometchat_accepted" translatable="true">accepted</string>
    <string name="cometchat_unanswered" translatable="true">unanswered</string>
    <string name="cometchat_message_receipt" translatable="true">Message Receipt</string>
    <string name="cometchat_file_download_failed" translatable="true">File download failed.</string>
    <string name="cometchat_suggest_a_reply" translatable="true">Suggest a reply</string>
    <string name="cometchat_enter_a_text" translatable="true">Enter a text</string>
    <string name="cometchat_form_completion_message" translatable="true">Thank you for filling out the form.</string>
    <string name="cometchat_conversation_summary" translatable="true">Conversation Summary</string>
    <string name="cometchat_generate_summary" translatable="true">Generate a summary</string>
    <string name="cometchat_more_times" translatable="true">More times</string>
    <string name="cometchat_select_a_day" translatable="true">Select a Day</string>
    <string name="cometchat_meeting_scheduled" translatable="true">Your meeting has been scheduled.</string>
    <string name="cometchat_meet_with" translatable="true">"Meet With "</string>
    <string name="cometchat_min_meeting" translatable="true">min meeting</string>
    <string name="cometchat_select_a_time" translatable="true">Select a Time</string>
    <string name="cometchat_no_time_slots_available" translatable="true">No time slot available for this date. Please try another date.</string>
    <string name="cometchat_book_new_slot" translatable="true">Book new slot</string>
    <string name="cometchat_something_went_wrong_please_try_again" translatable="true">Something went wrong. Please try again.</string>
    <string name="cometchat_error_conversations_title" translatable="true">Oops!</string>
    <string name="cometchat_retry" translatable="true">Retry</string>
    <string name="cometchat_group_members_empty_title" translatable="true">No Members Available</string>
    <string name="cometchat_group_member_empty_subtitle" translatable="true">Add members to the group and see them listed here.</string>
    <string name="cometchat_members" translatable="true">Members</string>
    <string name="cometchat_call_logs_title" translatable="true">Calls</string>
    <string name="cometchat_call_logs_empty_title" translatable="true">No Call Logs Yet</string>
    <string name="cometchat_call_logs_empty_subtitle" translatable="true">Make or receive calls to see your call history listed here</string>
    <string name="cometchat_call_logs_error_title" translatable="true">Oops!</string>
    <string name="cometchat_call_logs_error_subtitle" translatable="true">Looks like something went wrong. Please try again.</string>
    <string name="cometchat_saved" translatable="true">Saved</string>
    <string name="cometchat_saved_messages" translatable="true">Saved Messages</string>
    <string name="cometchat_no_saved_messages" translatable="true">No saved messages yet</string>
    <string name="cometchat_no_saved_messages_subtitle" translatable="true">Save messages to keep them handy whenever you need them.</string>
    <string name="cometchat_error_loading_members" translatable="true">Unable to load members. Please try again.</string>
    <string name="cometchat_pause_recording" translatable="true">Pause Recording</string>
    <string name="cometchat_resume_recording" translatable="true">Resume Recording</string>
    <string name="cometchat_send_recording" translatable="true">Send Recording</string>
    <string name="cometchat_delete_recording" translatable="true">Delete Recording</string>
    <string name="cometchat_play_recording" translatable="true">Play Recording</string>
    <string name="cometchat_pause_playback" translatable="true">Pause Playback</string>
</resources>